--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
         "fzaninotto/faker": "^1.4",
         "mockery/mockery": "^1.0",
         "nunomaduro/collision": "^3.0",
+        "friendsofphp/php-cs-fixer": "^2.4",
         "phpunit/phpunit": "^7.5"
     },
     "config": {
@@ -56,6 +57,9 @@
     "minimum-stability": "dev",
     "prefer-stable": true,
     "scripts": {
+        "format": [
+            "vendor/bin/php-cs-fixer fix"
+        ],
         "post-autoload-dump": [
             "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
             "@php artisan package:discover --ansi"
